testsuite/tests/properties/invalid_raise/bad_rtype/test.lkt
from common import FooNode

class Example: FooNode implements TokenNode {
    fun p(): Int = raise[String] PropertyError()
}
